--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 	</head>
 	<body>
-		<div class="lista" id="div">Añadir una lista...</div>
-		<form class="formulario none" id="formulario">
-			<input type="text" id="lista" name="lista" placeholder="Añadir una lista...">
-			<button type="submit" id="boton" class="button">Guardar</button>
-			<button type="submit" class="close" aria-label="Close" id="close"><span aria-hidden="true">&times;</span></button>
-		</form>
+		<div id="padre">
+			<div class="lista" id="div">Añadir una lista...</div>
+			<form class="formulario none" id="formulario">
+				<input type="text" id="lista" name="lista" placeholder="Añadir una lista...">
+				<button type="submit" id="boton" class="button">Guardar</button>
+				<button type="submit" class="close" aria-label="Close" id="close"><span aria-hidden="true">&times;</span></button>
+			</form>
+		</div>
 
 		<script type="text/javascript" src="js/app.js"></script>
 	</body>
